@@ -159,7 +159,7 @@ a.stats_link.missing span	{color:#000;}
 	============================================= */
 .main_title_wrap			{width:960px; margin:0 auto; padding:40px 20px;}
 .title_wrap					{width:960px; margin:0 auto; padding:0px 20px 40px 20px; margin-bottom:40px;}
-.table_wrap					{background-color:#FFF; padding:0 0 20px 0; border-radius:0 0 8px 8px; border:1px solid #000; border-top:0;}
+.table_wrap					{background-color:#FFF; padding:0 0 20px 0; border-radius:8px 8px 0 0; border:1px solid #000;}
 .table_wrap.main			{padding-bottom:0;}
 .table_wrap.view			{width:920px; margin:0 auto; padding:20px; margin-bottom:40px; border:1px solid #000;}
 
@@ -168,13 +168,13 @@ a.stats_link.missing span	{color:#000;}
 	============================================= */
 .description_wrap		{width:100%; margin:0 auto; padding-bottom:40px;}
 .description			{width:960px; margin:0 auto; padding:40px 0; text-align:left; margin-bottom:40px;}
-.description span.title	{display:block; color:#000; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-top:1px solid #000; border-bottom:1px solid #000;}
+.description span.title	{display:block; color:#000; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-bottom:1px solid #000;}
 .description span.title.sub	{font-size:1.0em; border:0; margin:0; padding-bottom:10px; font-weight:bold;}
 .description p			{padding:15px 0; font-size:1.2em; color:#000; line-height:1.2em; word-spacing:0.07em;}
-.description p.about_data	{border-top:1px solid #000; margin-top:30px;}
+.description p.about_data	{margin-top:30px;}
 .description a			{color:#000;}
 .description a:hover	{text-decoration:underline;}
-a.read					{display:inline-block; width:50%; color:#000; font-size:1.1em;}
+a.read					{display:inline-block; width:50%; color:#000; font-size:1.0em;}
 a.read.right			{text-align:right;}
 a.read:hover			{text-decoration:underline;}
 
@@ -191,9 +191,10 @@ a.read:hover			{text-decoration:underline;}
 .list_head_title			{width:400px; background-color:#000; padding:20px 40px; text-align:center; color:#FFF; font-size:2.3em;}
 .list_stats_title			{display:block; font-size:0.6em; color:#FFF; padding-bottom:10px;}
 .list_stats_num				{display:block; font-size:2.9em; color:#FFF; line-height:0.8em;}
-a.button					{padding:10px 20px; background-color:#FFF; font-size:1.25em; color:#000; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center; border:1px solid #000; border-top:0;}
+a.button					{padding:10px 20px; background-color:#FFF; font-size:1.25em; color:#000; border-radius:0 0 8px 8px; display:block; margin:0 auto; text-align:center; border:1px solid #000; border-top:0;}
 a.button:hover				{background-color:#000; color:#FFF;}
-a.csv_download				{display:block; margin-top:20px; padding:10px 0; background-color:#000; text-align:center; color:#FFF; border-radius:4px;}
+.download_wrap				{width:100%; margin:0 auto; text-align:center; margin-top:40px; margin-bottom:20px;}
+a.csv_download				{display:inline-block; margin-top:20px; padding:20px; background-color:#000; text-align:center; color:#FFF; border-radius:4px;}
 a.csv_download:hover		{background-color:#000; color:#FFF;}
 
 
@@ -266,7 +267,7 @@ table.head img				{-webkit-filter:brightness(100%); filter:brightness(100%);}
 
 /*	Table for Country Name and Flag
 	============================================= */
-table.country				{width:960px; margin:0 auto; padding:20px 0; border-collapse:initial; border-bottom:10px solid #000;}
+table.country				{width:960px; margin:0 auto; padding:20px 0; border-collapse:initial; border-bottom:1px solid #000;}
 table.country td.name		{width:800px; max-width:800px; padding-right:10px; font-size:4.0em; line-height:1.1em; color:#000;}
 table.country td.flag		{text-align:right;}
 table.country td.flag img	{max-height:90px;}
@@ -278,11 +279,12 @@ table.country td:hover		{cursor:default;}
 
 /*	Table Titles
 	============================================= */
-table.title				{width:100%; margin:0 auto; border-collapse:separate; padding-bottom:15px; border-bottom:10px solid #000;}
+table.title				{width:100%; margin:0 auto; border-collapse:separate; padding-bottom:15px;}
 table.title.key			{width:960px;}	/* Fix width for Key Figures */
 table.title.key a		{font-size:0.5em;}
-table.title td			{font-size:1.8em; line-height:1.15em; color:#000; vertical-align:bottom;}
+table.title td			{font-size:1.4em; color:#000; vertical-align:bottom; text-transform:capitalize;}
 table.title td:hover	{cursor:default;}
+table.title.key td, table.title.main td		{font-size:1.8em;}
 table.title td.sort		{padding:0 20px 0 10px; width:200px; color:#000; text-align:right; font-size:0.9em; line-height:1.1em;}
 table.title td.about	{padding-left:10px; width:350px;}
 table.title td.icon		{padding-right:10px; width:40px;}
