@@ -98,7 +98,7 @@ li.publishercol a.country_code		{padding:15px 0;}
 .description				{display:inline-block; vertical-align:top; width:410px; margin-right:60px;}
 .description.full			{width:100%; margin:0;}
 .description:last-of-type	{margin-right:0;}
-.description span.title		{display:block; color:#fff; line-height:1.35em; font-size:1.4em; padding:10px 0; width:100%; border-top:1px solid #CFC6B4; border-bottom:1px solid #CFC6B4;}
+.description span.title		{display:block; color:#fff; line-height:1.35em; font-size:1.4em; padding:10px 0; width:100%; border-bottom:1px solid #CFC6B4;}
 .description a:last-of-type	{margin-bottom:20px;}
 .description a:first-of-type{margin-top:10px;}
 .description a:hover		{text-decoration:underline;}
