@@ -170,7 +170,7 @@ a.stats_link.missing span	{color:#008FFF;}
 	============================================= */
 .main_title_wrap		{width:960px; margin:0 auto; padding:40px 20px;}
 .title_wrap				{width:960px; margin:0 auto; padding:0px 20px 40px 20px; margin-bottom:40px;}
-.table_wrap				{background-color:rgba(0,14,32,0.7); padding:0 0 20px 0; border-radius:0 0 8px 8px;}
+.table_wrap				{background-color:rgba(0,14,32,0.7); padding:0 0 20px 0; border-radius:8px 8px 0 0;}
 .table_wrap.main		{padding-bottom:0;}
 .table_wrap.view		{width:920px; margin:0 auto; padding:20px; margin-bottom:40px;}
 
@@ -179,10 +179,10 @@ a.stats_link.missing span	{color:#008FFF;}
 	============================================= */
 .description_wrap		{width:100%; margin:0 auto; background:linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 60%,rgba(0,14,32,0.9) 100%); background:-prefix-linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 50%,rgba(0,14,32,0.9) 100%); padding-bottom:40px;}
 .description			{width:880px; margin:0 auto; padding:40px; text-align:left; margin-bottom:40px; background-color:rgba(255,255,255,0.1);}
-.description span.title	{display:block; color:#FFF; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-top:1px solid #FFF; border-bottom:1px solid #FFF;}
+.description span.title	{display:block; color:#FFF; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-bottom:1px solid #FFF;}
 .description span.title.sub	{font-size:1.0em; border:0; margin:0; padding-bottom:10px; font-weight:bold;}
 .description p			{padding:15px 0; font-size:1.0em; color:#FFF; line-height:1.4em;}
-.description p.about_data	{border-top:1px solid #fff; margin-top:30px;}
+.description p.about_data	{margin-top:30px;}
 .description a			{color:#A8C5E5; text-decoration:none;}
 .description a:hover	{text-decoration:underline;}
 a.read					{display:inline-block; width:50%; text-decoration:none; color:#A8C5E5; font-size:1.0em;}
@@ -202,9 +202,10 @@ a.read:hover			{text-decoration:underline;}
 .list_head_title			{width:400px; background-color:#008FFF; padding:20px 40px; text-align:center; color:#FFF; font-size:2.3em;}
 .list_stats_title			{display:block; font-size:0.6em; color:#FFF; padding-bottom:10px;}
 .list_stats_num				{display:block; font-size:2.9em; color:#FFF; line-height:0.8em;}
-a.button					{padding:10px 20px; background-color:#33A4FC; font-size:1.25em; color:#FFF; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center;}
+a.button					{padding:10px 20px; background-color:#33A4FC; font-size:1.25em; color:#FFF; border-radius:0 0 8px 8px; display:block; margin:0 auto; text-align:center;}
 a.button:hover				{background-color:#008FFF;}
-a.csv_download				{display:block; margin-top:20px; padding:10px 0; background-color:rgba(132,191,255,0.24); text-align:center; color:#ccc; border-radius:4px;}
+.download_wrap				{width:100%; margin:0 auto; text-align:center; margin-top:40px; margin-bottom:20px;}
+a.csv_download				{display:inline-block; margin-top:20px; padding:20px; background-color:rgba(132,191,255,0.24); text-align:center; color:#ccc; border-radius:4px;}
 a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:#FFF;}
 	
 	
@@ -277,7 +278,7 @@ table.head img				{-webkit-filter:brightness(100%); filter:brightness(100%);}
 
 /*	Table for Country Name and Flag
 	============================================= */
-table.country				{width:960px; margin:0 auto; padding:20px 0; border-collapse:initial; border-bottom:10px solid #FFF;}
+table.country				{width:960px; margin:0 auto; padding:20px 0; border-collapse:initial; border-bottom:1px solid #FFF;}
 table.country td.name		{width:800px; max-width:800px; padding-right:10px; font-size:4.0em; line-height:1.1em; color:#FFF;}
 table.country td.name.publisher	{width:960px; max-width:960px; padding-right:0px;}
 table.country td.flag		{text-align:right;}
@@ -292,11 +293,12 @@ table.country img			{-webkit-filter:brightness(100%); filter:brightness(100%);}
 
 /*	Table Titles
 	============================================= */
-table.title				{width:100%; margin:0 auto; border-collapse:separate; padding-bottom:15px; border-bottom:10px solid #FFF;}
+table.title				{width:100%; margin:0 auto; border-collapse:separate; padding-bottom:15px;}
 table.title.key			{width:960px;}	/* Fix width for Key Figures */
 table.title.key a		{font-size:0.5em;}
-table.title td			{font-size:1.8em; line-height:1.15em; color:#FFF; vertical-align:bottom;}
+table.title td			{font-size:1.4em; color:#FFF; vertical-align:bottom; text-transform:capitalize;}
 table.title td:hover	{cursor:default;}
+table.title.key td, table.title.main td		{font-size:1.8em;}
 table.title td.sort		{padding:0 20px 0 10px; width:200px; color:#CCC; text-align:right; font-size:0.9em; line-height:1.1em;}
 table.title td.about	{padding-left:10px; width:350px;}
 table.title td.icon		{padding-right:10px; width:40px;}
