@@ -23,7 +23,7 @@
 			{table_header_amount}
 			{donor_transactions_datas}
 		</table>
-		<a download="dportal_donor_transactions.csv" href="{donor_transactions_datas_csv}" class="csv_download">{download_csv_text}</a>
+		<div class="download_wrap"><a download="dportal_donor_transactions.csv" href="{donor_transactions_datas_csv}" class="csv_download">{download_csv_text}</a></div>
 	</div>
 	<div class="center_wrap">
 		<a href="#view=donors" class="button">{list_donor_back_text}</a>
