@@ -21,7 +21,7 @@
 			{table_header_amount}
 			{list_activities_datas}
 		</table>
-		<a download="dportal_list_activities.csv" href="{list_activities_datas_csv}" class="csv_download">{download_csv_text}</a>
+		<div class="download_wrap"><a download="dportal_list_activities.csv" href="{list_activities_datas_csv}" class="csv_download">{download_csv_text}</a></div>
 	</div>
 	{back_portal}
 </div>
