@@ -22,7 +22,7 @@
 			{table_header_amount}
 			{list_budgets_datas}
 		</table>
-		<a download="dportal_list_budgets.csv" href="{list_budgets_datas_csv}" class="csv_download">{download_csv_text}</a>
+		<div class="download_wrap"><a download="dportal_list_budgets.csv" href="{list_budgets_datas_csv}" class="csv_download">{download_csv_text}</a></div>
 	</div>
 	<div class="center_wrap">
 		<a href="#view=publisher_countries" class="button">{list_country_back_text}</a>
