@@ -21,7 +21,7 @@
 			{table_header_list}
 			{list_publishers_datas}
 		</table>
-		<a download="dportal_list_publishers.csv" href="{list_publishers_datas_csv}" class="csv_download">{download_csv_text}</a>
+		<div class="download_wrap"><a download="dportal_list_publishers.csv" href="{list_publishers_datas_csv}" class="csv_download">{download_csv_text}</a></div>
 	</div>
 	{back_portal}
 </div>
