@@ -148,7 +148,7 @@
 
 #main_active
 <div class="main_title_wrap">
-	<table class="title">
+	<table class="title main">
 		<tr>
 			<td class="icon"><img src="{flava}active_icon.png" alt="{active_icon_alt_text}" width="40" height="40"/></td>
 			<td>{list_active_text}</td>
@@ -167,7 +167,7 @@
 
 #main_ended
 <div class="main_title_wrap">
-	<table class="title">
+	<table class="title main">
 		<tr>
 			<td class="icon"><img src="{flava}ended_icon.png" alt="{ended_icon_alt_text}" width="40" height="40"/></td>
 			<td>{list_ended_text}</td>
