@@ -23,7 +23,7 @@
 			{table_header_amount}
 			{sector_budgets_datas}
 		</table>
-		<a download="dportal_sector_budgets.csv" href="{sector_budgets_datas_csv}" class="csv_download">{download_csv_text}</a>
+		<div class="download_wrap"><a download="dportal_sector_budgets.csv" href="{sector_budgets_datas_csv}" class="csv_download">{download_csv_text}</a></div>
 	</div>
 	<div class="center_wrap">
 		<a href="#view=sectors" class="button">{list_sector_back_text}</a>
