@@ -1,6 +1,10 @@
 Development Portal (2016-06-22 shi)
 ==============================
 Updated all email contacts to support@iatistandard.org sitewide
+Minor CSS fix
+Isolate download buttons
+Remove max-width of navigation buttons for consistency
+Clean up overall layout and footer
 
 
 Development Portal (2016-06-16 shi)
